--- a/Web Site Receitas/css/style.css
+++ b/Web Site Receitas/css/style.css
@@ -6,7 +6,7 @@
 }
 
 header{
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(img/home.png);
+    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(../img/home.png);
     height: 100vh; 
     background-size: cover;
     background-position: center;
